Today News Updated! 👊

--- a/content/lotd_20160921.md
+++ b/content/lotd_20160921.md
@@ -1,3 +1,17 @@
 ## LOTD_20160921 
 
 - I ❤️ homebrew **Homebrew 1.0.0** [LINK](http://brew.sh/2016/09/21/homebrew-1.0.0/)
+
+- uyy buenas calcas para la mac [LINK](http://www.decalontop.com/)
+
+- **Tesla Fixes Security Bugs After Claims of Model S Hack**[LINK](https://it.slashdot.org/story/16/09/21/0432242/tesla-fixes-security-bugs-after-claims-of-model-s-hack)
+
+- **'Mr. Robot' may be fiction, but its hacking plots are all too real** [LINK](http://www.recode.net/2016/9/20/12983780/mr-robot-may-be-fiction-but-its-hacking-plots-are-all-too-real)
+
+- **Netflix Wants 50% Of Its Library To Be Original Content** [LINK](https://entertainment.slashdot.org/story/16/09/21/147235/netflix-wants-50-of-its-library-to-be-original-content)
+
+- **McLaren denies reports that Apple is looking to make a deal [Updated]** [LINK](http://arstechnica.com/cars/2016/09/iphones-and-f1-cars-apple-rumored-to-buy-mclaren/)
+
+- **Microsoft and Sony Are Debating Over Whose Console Really Offers 'True 4K'** [LINK](https://games.slashdot.org/story/16/09/21/1810225/microsoft-and-sony-are-debating-over-whose-console-really-offers-true-4k)
+
+- **Microsoft aren't forcing Lenovo to block free operating systems** [LINK](http://mjg59.dreamwidth.org/44694.html)
