Today News Updated! 👊

--- a/content/lotd_20160922.md
+++ b/content/lotd_20160922.md
@@ -4,17 +4,22 @@
 
 - **Microsoft Will 'Solve' Cancer Within The Next 10 Years By Treating It Like A Computer Virus, Says Company** [LINK][2]
 
-- **Nokia Says It Can Deliver Internet 1,000x Faster Than Google Fiber**[LINK][3]
+- **Nokia Says It Can Deliver Internet 1,000x Faster Than Google Fiber** [LINK][3]
 
+- **Why we should just simply call ourselves Hackers** [LINK][4]
 
+- **Reddit Brings Down North Korea's Entire Internet**. Redditor BaconBakin points out that while North Korea has 28 websites, GTA V has 83 websites. They added, "I think it's safe to say that San Andreas is more technologically advanced than North Korea." [LINK][5]
 
+- **Sublime Text 3 Build 3124** 🎉 [LINK][6]
 
-
-
-
+- **15 Must-have Chrome extensions for web designers and front end developer** [LINK][7]
 
 
 
 [1]: https://tech.slashdot.org/story/16/09/21/1958249/mark-zuckerberg-and-priscilla-chan-announce-3-billion-initiative-to-cure-all-diseases
 [2]: https://news.slashdot.org/story/16/09/20/2111240/microsoft-will-solve-cancer-within-the-next-10-years-by-treating-it-like-a-computer-virus-says-company
 [3]: https://tech.slashdot.org/story/16/09/21/2026240/nokia-says-it-can-deliver-internet-1000x-faster-than-google-fiber
+[4]: https://medium.com/@foobar.systems/why-we-should-just-simply-call-ourselves-hackers-366a4374a572#.i97nenaiy
+[5]: https://news.slashdot.org/story/16/09/21/2110242/reddit-brings-down-north-koreas-entire-internet
+[6]: https://www.sublimetext.com/blog/articles/sublime-text-3-build-3124
+[7]: https://medium.muz.li/15-must-have-chrome-extensions-for-web-designers-and-front-end-developer-b12c1bd9490c#.ejj9uohxy
