Today News Updated! 👊

--- a/content/lotd_20160922.md
+++ b/content/lotd_20160922.md
@@ -14,6 +14,17 @@
 
 - **15 Must-have Chrome extensions for web designers and front end developer** [LINK][7]
 
+- **Yahoo Confirms Massive Data Breach, 500 Million Users Impacted [Updated]** [LINK][8]
+
+- **Elon Musk To Unveil Solar Roof With Storage, Charger Next Month** [LINK][9]
+
+- **19-Year-Old Jailbreaks iPhone 7 In 24 Hours** [LINK][10]
+
+- **Playpen: The Story of the FBI’s Unprecedented and Illegal Hacking Operation** [LINK][11]
+
+- “We recently discovered an error in the way we calculate one of our video metrics,” 😂 si chuy, un "error" **Facebook Overestimated Key Video Metric For Two Years** [LINK][12]
+
+
 
 
 [1]: https://tech.slashdot.org/story/16/09/21/1958249/mark-zuckerberg-and-priscilla-chan-announce-3-billion-initiative-to-cure-all-diseases
@@ -23,3 +34,8 @@
 [5]: https://news.slashdot.org/story/16/09/21/2110242/reddit-brings-down-north-koreas-entire-internet
 [6]: https://www.sublimetext.com/blog/articles/sublime-text-3-build-3124
 [7]: https://medium.muz.li/15-must-have-chrome-extensions-for-web-designers-and-front-end-developer-b12c1bd9490c#.ejj9uohxy
+[8]: https://it.slashdot.org/story/16/09/22/095255/yahoo-confirms-massive-data-breach-500-million-users-impacted-updated
+[9]: https://hardware.slashdot.org/story/16/09/22/1926231/elon-musk-to-unveil-solar-roof-with-storage-charger-next-month
+[10]: https://apple.slashdot.org/story/16/09/22/2019250/19-year-old-jailbreaks-iphone-7-in-24-hours
+[11]: https://www.eff.org/deeplinks/2016/09/playpen-story-fbis-unprecedented-and-illegal-hacking-operation
+[12]: http://www.wsj.com/articles/facebook-overestimated-key-video-metric-for-two-years-1474586951
