Today News Updated! 👊

--- a/content/lotd_20160910.md
+++ b/content/lotd_20160910.md
@@ -1,1 +1,5 @@
 ## LOTD_20160910
+
+- Samsung knew a third replacement Note 7 caught fire on Tuesday and said nothing [LINK](http://www.theverge.com/2016/10/9/13215728/samsung-galaxy-note-7-third-fire-smoke-inhalation)
+- German push to ban combustion-engine cars by 2030 wins support [LINK](http://uk.reuters.com/article/us-autos-emissions-germany-idUKKCN1280G7)
+-  More Software Engineers Over Age 40 May Join a Lawsuit Against Google  (yahoo.com)  [LINK](https://yro.slashdot.org/story/16/10/09/0127214/more-software-engineers-over-age-40-may-join-a-lawsuit-against-google)
